# ESP32_hotimage

./: readme.md
hotimage_code/components/ThermalImaging/: CMakeLists.txt  Kconfig  upload_script.html
hotimage_code/components/ThermalImaging/include/: CelsiusSymbol.h  IDW.h  console.h  func.h  menu.h  messagebox.h  palette.h  save.h  settings.h  sleep.h  thermalimaging.h  webserver.h
hotimage_code/components/ThermalImaging/include/iic/: MLX90640_I2C_Driver.h  driver_MLX90640.h  driver_sht31.h  iic.h
hotimage_code/components/ThermalImaging/include/lcd/: dispcolor.h  f16f.h  f24f.h  f32f.h  f6x8m.h  font.h  spi_lcd.h  st7789.h
hotimage_code/components/ThermalImaging/include/tasks/: adc_task.h  buttons_task.h  mlx90640_task.h  render_task.h  sd_task.h  sht31_task.h  wifi_task.h
hotimage_code/components/ThermalImaging/include/tools/: SAFiter.h  tools.h
hotimage_code/components/ThermalImaging/src/: console.c  func.c  menu.c  messagebox.c  save.c  settings.c  sleep.c
hotimage_code/components/ThermalImaging/src/iic/: MLX90640_I2C_Driver.c  driver_MLX90640.c  driver_sht31.c  iic.c
hotimage_code/components/ThermalImaging/src/interpolation/: Bilinear.c  Gauss.c  palette.c
hotimage_code/components/ThermalImaging/src/lcd/: dispcolor.c  lcd_bl.c  spi_lcd.c  st7789.c
hotimage_code/components/ThermalImaging/src/task/: adc_task.c  buttons_task.c  mlx90640_task.c  render_task.c  sd_task.c  sht31_task.c  wifi_task.c
hotimage_code/components/ThermalImaging/src/tools/: SAFiter.c  tools.c
hotimage_code/components/ThermalImaging/src/webserver/: fileserver.c  webserver.c
(+13 files in other folders)
